--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -20,6 +20,7 @@ import /init.qcom.power.rc
 on early-init
     mount debugfs debugfs /sys/kernel/debug
     chown system system /sys/kernel/debug/kgsl/proc
+    write /sys/block/zram0/comp_algorithm lz4
 
 on init
     # Set permissions for persist partition
