--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -1,5 +1,5 @@
 on early-init
-    write /sys/block/mmcblk0/queue/scheduler "noop"
+    write /sys/block/mmcblk0/queue/scheduler "cfq"
     write /sys/block/mmcblk0/bdi/read_ahead_kb 512
     write /sys/class/mmc_host/mmc0/clk_scaling/scale_down_in_low_wr_load 1
 
@@ -107,5 +107,5 @@ on property:recovery.perf.mode=0
 
 on property:dev.bootcomplete=1
     rm /data/system/perfd/default_values
-    setprop sys.io.scheduler "bfq"
+    setprop sys.io.scheduler "cfq"
     start mpdecision
